tests/neg/_TypeInterweaving/unmatched1.scala

def f1[T (x: T)] = ??? // error
